--- a/index.html
+++ b/index.html
@@ -6,31 +6,38 @@
   <title>Monad Flip Game</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/web3@1.10.0/dist/web3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
+  <!-- Overlay to prompt user interaction -->
+  <div id="startOverlay" class="overlay">
+    <div class="overlay-content">
+      <h2>Welcome to Monad Flip Game!</h2>
+      <button id="startGameBtn">Start Game with Music</button>
+    </div>
+  </div>
+
   <header>
     <button id="hamburger">☰</button>
     <div id="menu" class="hidden">
       <button id="connectWalletBtn">Connect Wallet</button>
       <button id="claimFaucetBtn">Claim 10 MB Faucet</button>
+      <button id="toggleMusicBtn">🎶 Play Music</button>
+      <button id="themeToggleBtn">🌙 Toggle Theme</button> <!-- Theme toggle -->
       <div id="faucetStatus"></div>
     </div>
   </header>
 
   <main>
     <h1>Monad Flip Game</h1>
-
     <div id="walletStatus">Not connected</div>
-
     <label for="tokenSelect">Choose token:</label>
     <select id="tokenSelect">
       <option value="MON">Monad (Native)</option>
       <option value="MB">MB Token</option>
     </select>
-
     <label for="wagerInput">Wager Amount:</label>
     <input id="wagerInput" type="number" step="0.01" min="0.2" placeholder="Enter wager amount" />
-
     <button id="flipButton" title="Flip the coin">
       <div class="coin">
         <div class="coin-heads">
@@ -39,10 +46,16 @@
         <div class="coin-tails">Tails</div>
       </div>
     </button>
-
     <div id="result"></div>
+    <div id="streak"></div> <!-- Streak tracker -->
+    <div id="shareWin" class="hidden">
+      <button id="shareBtn">📤 Share Win on X</button> <!-- Social share -->
+    </div>
     <div id="balance"></div>
+    <div id="leaderboard"></div> <!-- Leaderboard -->
   </main>
+
+  <audio id="bgMusic" src="timeless.mp3" loop></audio>
 
   <script src="app.js"></script>
 </body>
